--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -41,14 +41,16 @@
     </nav>
 
     <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <router-outlet></router-outlet>
 
-      <router-outlet></router-outlet>
+      </div> 
+    </div>
+
   </div>
   <!-- /#page-content-wrapper -->
 
 
 </div>
 </div>
-<!-- /#wrapper -->
-
-<!-- Bootstrap core JavaScript -->
